2006-10-27  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclBasic.c (TclRenameCommand): Change to take CONST args;
	they were only ever used in a constant way anyway, so this appears to
	be a spot that was missed during TIP#27 work.

2006-10-26  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclProc.c (SetLambdaFromAny): minor change, eliminate
	redundant call to Tcl_GetString (thanks aku).
	
	* generic/tclInterp.c (ApplyObjCmd):
	* generic/tclNamesp.c (EnsembleImplementationCmd): replaced
	ckalloc (heap) with TclStackAlloc (execution stack).

2006-10-24  Miguel Sofer  <msofer@users.sf.net>

	* tests/info.test (info-9.11-12): tests for [Bug 1577492]
	* tests/apply.test (apply-4.3-5): tests for [Bug 1574835]

	* generic/tclProc.c (ObjInterpProcEx): disable itcl hacks for
	calls from ApplyObjCmd (islambda==1), as they mess apply's error
	messages [Bug 1583266]

2006-10-23  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclProc.c (ApplyObjCmd): fix wrong#args for apply by
	using the ensemble rewrite engine, [Bug 1574835].
	* generic/tclInterp.c (AliasObjCmd): previous commit missed usage
	of TCL_EVAL_NOREWRITE for aliases.

	* generic/tclBasic.c (TclEvalObjvInternal): removed redundant
	check for ensembles [Bug 1577628].
	
	* library/clock.tcl (format, scan): corrected wrong # args
	* tests/clock.test (3.1, 34.1):     messages to make use of the
	new rewrite capabilities of [info level]

	* generic/tcl.h:           Lets TEOV update the iPtr->objc/objv
	* generic/tclBasic.c:      fields, except when the (new) flag bit 
	* generic/tclInt.h:        TCL_EVAL_NOREWRITE is present. This 
	* generic/tclNamesp.c:     causes [info level] to know and use  
	* generic/tclProc.c:       ensemble rewrites [Bug 1577492]
	* tests/namespace.test:

	***POTENTIAL INCOMPATIBILITY*** 
	The return value from [info level 0] on interp alias calls is
	changed: previously returned the target command (including curried
	values), now returns the source - what was actually called. 
